--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "bin/www",
-    "develop": "nodemon -q bin/www",
+    "dev": "nodemon -q bin/www",
     "db:create": "./node_modules/.bin/sequelize-cli db:create",
     "db:drop": "./node_modules/.bin/sequelize-cli db:drop",
     "db:migrate": "./node_modules/.bin/sequelize-cli db:migrate",
@@ -13,9 +13,10 @@
     "db:seed": "./node_modules/.bin/sequelize-cli db:seed:all"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "morgan": "^1.10.0",
-    "pg": "^8.7.3",
+    "mysql2": "^3.2.4",
     "sequelize": "^6.18.0",
     "sequelize-cli": "^6.4.1"
   },
